platform/gitops/apps/sentinelforge-demo/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: sentinelforge-demo
  namespace: default
  labels:
    app: sentinelforge-demo

spec:
  replicas: 2
  progressDeadlineSeconds: 60
  progressDeadlineAbort: true

  strategy:
    canary:
      steps:
        - setWeight: 50
        - pause: {}

  selector:
    matchLabels:
      app: sentinelforge-demo

  template:
    metadata:
      labels:
        app: sentinelforge-demo
      annotations:
        sentinelforge.dev/network-policy: "enabled"

    spec:
      containers:
        - name: app
          image: 216453078762.dkr.ecr.ap-south-1.amazonaws.com/sentinelforge-demo:4d47943704226c31d498d96c2b4763a8286edf42

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 2

          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 32Mi

---
apiVersion: v1
kind: Service
metadata:
  name: sentinelforge-demo
  namespace: default

spec:
  selector:
    app: sentinelforge-demo

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP
